# stl-levelset-converter

./: .gitignore  CMakeLists.txt  License.txt  README.md  config.txt
doc/: PorosityCalculator_Specification_en.md  PorosityCalculator_Specification_jp.md
etc/: run.sh
src/: CMakeLists.txt  stl2poro.cpp
